--- a/lecsofozo/Solution.DesktopApp/AppShell.xaml
+++ b/lecsofozo/Solution.DesktopApp/AppShell.xaml
@@ -55,6 +55,11 @@
                         <FontImageSource Glyph="&#x25B6;" FontFamily="Arial" Color="Black"/>
                     </MenuFlyoutItem.IconImageSource>
                 </MenuFlyoutItem>
+                <MenuFlyoutItem Text="List Races" Command="{Binding ListRaceCommand}">
+                    <MenuFlyoutItem.IconImageSource>
+                        <FontImageSource Glyph="&#x25B6;" FontFamily="Arial" Color="Black"/>
+                    </MenuFlyoutItem.IconImageSource>
+                </MenuFlyoutItem>
             </MenuFlyoutSubItem>
         </MenuBarItem>
     </Shell.MenuBarItems>
